# ZeMoFinance

./: .gitignore  AGENTS.md  App.uvue  README.md  manifest.json  pages.json
components/: GlobalBackground.uvue
docs/: zemo-o-real-ocr-sft.md
harmony-configs/: build-profile.json5
harmony-configs/entry/src/main/cpp/: CMakeLists.txt  zemo_mslite_native.cpp
harmony-configs/entry/src/main/cpp/types/libzemo_mslite_native/: index.d.ts
native/: FloatingTimer.uts
scripts/: README-layout-aware-field-encoder.md  convert-chinese-roberta-field-cls-ms.ps1  convert-minimind-o-zemo-ms.ps1  convert-screen-omni-intent-ms.ps1  convert-screen-omni-vision-intent-ms.ps1  eval-minimind-v-zemo-screen.ps1  export-chinese-roberta-field-cls-onnx.py  export-finance-field-hash-cls-onnx.py  export-layout-aware-field-encoder-scratch-onnx-lite.py  export-layout-aware-field-encoder-scratch-onnx.py  export-minimind-o-zemo-onnx.py  export-minimind-o-zemo-screen-data.py  export-minimind-v-sft-data.py  export-zemo-o-real-ocr-sft.py  export-zemo-real-ocr-pretrain-jsonl.py  generate-finance-field-seed-data.py  generate-sync-flatbuffers.ps1  load-quantized-minimind-v.py  package-layout-field-model-runtime.py  predict-screen-omni-lite-model.py  prepare-finance-layout-data.py  prepare-screen-omni-data.py  pretrain-layout-aware-base-encoder-scratch.py  probe-finance-field-cls.py  probe-layout-aware-field-encoder-scratch.py  quantize-minimind-v-zemo-screen.py  start-screen-model-training.py  train-chinese-roberta-field-cls.py  train-layout-aware-field-encoder-from-base.py  (+7 more)
tools/mslite_cpp_smoke/: CMakeLists.txt  main.cc  op_dump.cc
(+222 files in other folders)
